[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu_system/end_screen/EndScreen.gd" type="Script" id=2]
[ext_resource path="res://src/menu_system/buttons/PlayAgainButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/menu_system/buttons/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Earth/background.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main menu/Logo.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UserInterface/SaveButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UserInterface/SaveText.tscn" type="PackedScene" id=9]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.36035
margin_bottom = -1.36035
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -629.014
margin_top = -192.778
margin_right = -340.014
margin_bottom = -40.7783

[node name="PlayAgainButton" parent="Menu" instance=ExtResource( 3 )]
margin_right = 288.0
margin_bottom = 72.0

[node name="QuitButton2" parent="Menu" instance=ExtResource( 4 )]
margin_top = 80.0
margin_right = 288.0
margin_bottom = 152.0
scene_to_load = ""

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( -1.50726, 3.01469 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 638.891, 53.8034 )
texture = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -17.0933, 1.36038 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0.772549 )
margin_left = -39.2793
margin_top = 369.0
margin_right = 1379.72
margin_bottom = 493.0
color = Color( 0.133333, 0.129412, 0.2, 1 )

[node name="Title" parent="Node2D" instance=ExtResource( 7 )]
margin_left = 199.975
margin_top = 233.984
margin_right = 1174.97
margin_bottom = 586.984
text = "Congratulations you finished the game!"

[node name="Result" type="Label" parent="Node2D"]
anchor_right = 1.0
margin_left = 231.986
margin_top = 381.443
margin_right = 1142.99
margin_bottom = 551.443
text = "Your final score is: %s coins , %s diamonds and you caught %s animals!"
align = 1
valign = 1

[node name="SaveButton" parent="." instance=ExtResource( 8 )]

[node name="SaveText" parent="." instance=ExtResource( 9 )]
frame = 8
[connection signal="button_up" from="Menu/QuitButton2" to="." method="_on_QuitButton2_button_up"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
